apps/20-media/whisparr/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whisparr
  labels:
    app: whisparr
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: whisparr
  template:
    metadata:
      labels:
        app: whisparr
        vixens.io/sizing.whisparr: V-small
        vixens.io/backup-profile: "relaxed"
      annotations:
        reloader.stakater.com/auto: "true"
        vixens.io/fast-start: "true"
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
        prometheus.io/path: "/metrics"
        vixens.io/no-long-connections: "true"
    spec:
      priorityClassName: vixens-medium
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      initContainers: []
      containers:
        - name: whisparr
          resources:
            requests:
              cpu: 50m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
          image: ghcr.io/hotio/whisparr:nightly
          ports:
            - containerPort: 6969 # Default Whisparr UI port
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
              add: ["SETGID", "SETUID", "CHOWN", "DAC_OVERRIDE"]
          livenessProbe:
            httpGet:
              path: /ping
              port: 6969
            initialDelaySeconds: 120
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /ping
              port: 6969
            initialDelaySeconds: 60
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: /ping
              port: 6969
            failureThreshold: 20
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: media
              mountPath: /media
              subPath: xxx
      volumes:
        - name: config
          emptyDir: {}
        - name: downloads
          nfs:
            server: nas.truxonline.com
            path: /mnt/tank/scratch/downloads
        - name: media
          nfs:
            server: nas.truxonline.com
            path: /mnt/tank/data/media
      securityContext:
        runAsNonRoot: true
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
