apps/20-media/whisparr/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whisparr
  labels:
    app: whisparr
spec:
  selector:
    app: whisparr
  ports:
    - name: http
      protocol: TCP
      port: 6969
      targetPort: 6969
    - name: metrics
      protocol: TCP
      port: 9090
      targetPort: 9090
